alignment issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -2757,7 +2757,7 @@ margin-left: 20px;
   /* ===?chart section ===  */
   .token_chart-container {
     width: 100%;
-    max-width: 800px;
+    /* max-width: 800px; */
     background-color: #222C34;
     border-radius: 4px;
     padding: 20px;
